tt-style.css
.timetable{
	font-family: Verdana, Arial, Helvetica, sans-serif;
	color: #003333;
	text-decoration: bold;
	border-collapse:collapse;
	border-color: #000px;
	border-width: 0px;
	border-style: solid;
}

.timetable tr:not(inner-row){
	font-size: 9px;
	color: #003333;
	font-weight:bold;
	background-color: #E1E1E1;
	text-align: left;
	margin: 0px;
}

.timetable th{
	font-size: 11px;
	color: #333333;
	background-color: #999999;
	text-align: center;
	height: 20px;
	vertical-align: middle;
	border-style:solid;
	border-top-width: 2px;
	border-bottom-width: 2px;
	border-left-width: 1.5px;
	border-right-width: 1.5px
}

.period-first-slot{
	border-width: 1.5px;
	border-style: solid;
	border-bottom-style:none;
	margin: 0px;
	border-collapse: collapse; !important
}

.period-middle-slot{
	margin: 0px;
	border-width: 1.5px;
	border-right-style: solid;
	border-left-style: solid;
	text-align: center;
	border-collapse: collapse; !important
}

.period-last-slot{
	margin: 0px;
	border-width: 1.5px;
	border-style: solid;
	border-top-style:none;
	border-collapse: collapse; !important
}

.period-single-slot {
	margin: 0px;
	border-width: 1.5px;
	border-style: solid;
	border-collapse: collapse; !important
}

.period-empty-slot{
	margin: 0px;
	border-width: 1px;
	border-top-style: dashed;
	border-left-style: solid;
	border-right-style: solid;
	border-collapse: collapse; !important
}

.period-hours {
	font-size: 10px; /*changed from 11px to 10px
	color: #333333;
	background-color: #999999;
	text-align: center;
	/*height: 20px;*/
	vertical-align: middle;
	border-style:solid;
	border-width: 1px;
	border-left-width: 1px;
	border-right-width: 2px
}

.timetable a{
	font-weight: bold;
	font-size: 9px;
	border-style:none;
}

span.float-left {
float: left;
}

.cont-td{
  border-collapse: collapse;
  margin: 0px;
  padding: 0px;
  border: 0px;
  height: 20px; !important
}


.inner-table {
  table-layout: fixed;
  border-collapse: collapse;
  margin: 0px;
  border: 0px;
  padding: 0px;
  width: 100%;
  height: 20px; !important
}

.inner-row {
  border-collapse: collapse; !important
  margin: 0px; !important
  width: 100%; !important
  height: 20px; !important
}

td{
  overflow: hidden;
  display: table-cell;
  white-space: nowrap; !important
  margin: 0px; !important
  height: 20px; !important
}

